com/wolf/piano/test/base/error/recover2error.go
package main

import (
	"errors"
	"fmt"
	"runtime/debug"
)

// panic异常处理机制不会自动将错误信息传递给error，所以要在funcA函数中进行显式的传递
func funcA() (err error) {
	defer func() {
		if p := recover(); p != nil {
			fmt.Println("panic recover! p:", p)
			str, ok := p.(string)
			if ok {
				err = errors.New(str)
			} else {
				err = errors.New("panic")
			}
			debug.PrintStack()
		}
	}()
	return funcB()
}

func funcB() error {
	// simulation
	panic("foo")
	return errors.New("success")
}

func main() {
	err := funcA()
	if err == nil {
		fmt.Printf("err is nil\n")
	} else {
		fmt.Printf("err is %v\n", err)
	}
}
